# primecipher

./: .conform.yaml  .cursorrules  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRACT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  STATUS.md  TRADING_GUIDE.md  TUTORIAL.md  Update  docker-compose.yaml  jest.config.ts  jest.setup.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  whitelist.py
__tests__/: ParentsList.test.tsx  RefreshButton.test.tsx  StaleBanner.test.tsx  api.test.ts  narrative-page.test.tsx  page.test.tsx
backend/: .assistant-rules.md  .env.example  Dockerfile  Makefile  TESTING.md  db.py  jobs.py  main.py  models.py  parents.py  pyproject.toml  pytest.ini  repo.py  requirements.txt  schemas.py  seeds.py  storage.py  whitelist.py
backend/adapters/: __init__.py  coingecko.py  dexscreener.py  mixed.py  registry.py  source.py
backend/api/routes/: heatmap.py  narratives.py  parents.py  refresh.py  refresh_jobs.py
backend/app/: backtest.py  backtest_walk.py  compute.py  config.py  db.py  debug.py  jobs.py  main.py  models.py  parents.py  repo.py  schemas.py  seeds.py  storage.py  version.py
backend/app/adapters/: base.py  onchain.py  registry.py  source.py
backend/app/api/routes/: narratives.py  parents.py  refresh.py  refresh_jobs.py  seeds.py
backend/app/tools/: synthetic_backfill.py
backend/app/workers/: snapshot_worker.py
backend/scripts/: generate_stub_data.py
backend/seeds/: narratives.seed.json
backend/tests/: __init__.py  conftest.py  test_adapter.py  test_adapter_memo.py  test_adapter_memo_basic.py  test_adapter_memo_normalize.py  test_adapter_memo_ttl.py  test_adapter_registry.py  test_adapter_registry_extra.py  test_api.py  test_api_backtest_endpoints.py  test_api_baseline.py  test_auth_branches.py  test_auth_branches_extra.py  test_auth_coverage.py  test_auth_edges.py  test_auth_line_hits.py  test_auth_require_refresh_token.py  test_auth_units.py  test_auth_units_strict.py  test_backtest_env_toggle_smoke.py  test_backtest_helpers.py  test_backtest_iter_range_tolerant.py  test_backtest_metrics_paths.py  test_backtest_metrics_shape.py  test_backtest_optional_helpers.py  test_backtest_run_once_branching.py  test_backtest_run_once_smoke.py  test_backtest_run_once_tolerant.py  test_backtest_seed_helpers.py  test_backtest_walk_accumulates_results.py  test_backtest_walk_boundaries.py  test_backtest_walk_connect.py  test_backtest_walk_iter_count.py  test_backtest_walk_iteration_limit.py  test_backtest_walk_passthroughs.py  test_backtest_walk_slice_paths.py  test_backtest_walk_smoke.py  test_backtest_walk_step_handling.py  test_backtest_walk_step_passthrough.py  (+75 more)
docs/: MILESTONE-M1.md  REFRESH.md  REFRESH_SPEC.md  schemas.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
lib/: list_functions.py
seeds/: README.md  (+1 more)
(+80 files in other folders)
