[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [
  {email = "s.whitlock@live.com", name = "Stephen Whitlock"}
]
dependencies = [
  "SQLAlchemy (>=2.0.34,<3.0.0)",
  "fastapi (>=0.115.0,<0.116.0)",
  "httpx (>=0.27.2,<0.28.0)",
  "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)"
]
description = "primecipher backend"
name = "primecipher"
readme = "README.md"
requires-python = "<4.0,>=3.12"
version = "0.0.0"

[tool.black]
line-length = 79

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "docs/conf.py",
  "whitelist.py"
]

[tool.docformatter]
in-place = true
wrap-summaries = 72

[tool.docsig]
check-class = true
check-protected-class-methods = true
enforce-capitalization = true

[tool.flynt]
line-length = 79
transform-concats = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
exclude = [
  'whitelist\.py'
]
ignore_missing_imports = true
install_types = true
non_interactive = true

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<26.0.0"
docsig = "^0.71.0"
flynt = "^1.0.1"
isort = ">=5.13.2,<7.0.0"
mypy = "^1.10.0"
pre-commit = ">=3.3.3,<5.0.0"
pylint = "^3.3.7"
pytest = "^8.2.0"
pytest-cov = ">=5,<7"
uvicorn = "^0.30.6"
vulture = "^2.11"

[tool.pylint.options]
disable = [
  "R0801",
  "consider-using-f-string",
  "fixme",
  "too-many-arguments",
  "too-many-locals",
  "too-many-statements"
]
ignore-patterns = [
  'conf\.py',
  'whitelist\.py'
]
min-similarity-lines = 9

[tool.pylint."tests/*"]
disable = [
  "attribute-defined-outside-init",
  "global-statement",
  "import-outside-toplevel",
  "line-too-long",
  "protected-access"
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
markers = [
  "benchmark: Marks tests as benchmarks"
]
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
