[project]
name = "primecipher"
version = "0.0.0"
description = "primecipher backend"
authors = [
    {name = "Stephen Whitlock",email = "s.whitlock@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.30.6,<0.31.0)",
    "httpx (>=0.27.2,<0.28.0)",
    "SQLAlchemy (>=2.0.34,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
